--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
            src="http://tianqi.2345.com/plugin/widget/index.htm?s=3&amp;z=2&amp;t=0&amp;v=0&amp;d=3&amp;bd=0&amp;k=000000&amp;f=&amp;q=1&amp;e=1&amp;a=1&amp;c=54511&amp;w=180&amp;h=36&amp;align=left"></iframe>
     <div class="login">
         <span id="time">时间</span>
-        <span><a href="login.html" target="_blank">登录</a></span>
-        <span><a href="register.html"target="_blank">注册</a></span>
+        <span><a href="pages/login.html" target="_blank">登录</a></span>
+        <span><a href="pages/register.html" target="_blank">注册</a></span>
     </div>
 
 </div><!--头部-->
@@ -68,7 +68,7 @@
                                 </span>
                                 <span class="muted">
                                   <i class="glyphicon glyphicon-envelope"></i>
-                                  <a href="commment.html" target="_blank">评论</a>
+                                  <a href="pages/commment.html" target="_blank">评论</a>
                                 </span>
                                 <span class="muted last">
                                   <a href="#">
@@ -80,7 +80,7 @@
                          </p>
                      </div>
                     <div class="content">
-                        <a href="commment.html" target="_blank">
+                        <a href="pages/commment.html" target="_blank">
                             <img src="img/zjl.jpg">
                         </a>
                         &nbsp;&nbsp;七里香<br>
@@ -138,7 +138,7 @@
                                 </span>
                                 <span class="muted">
                                   <i class="glyphicon glyphicon-envelope"></i>
-                                  <a href="commment.html" target="_blank">评论</a>
+                                  <a href="pages/commment.html" target="_blank">评论</a>
                                 </span>
                                 <span class="muted last">
                                   <a href="#">
@@ -150,7 +150,7 @@
                          </p>
                      </div>
                      <div class="content">
-                         <a href="commment.html" target="_blank">
+                         <a href="pages/commment.html" target="_blank">
                              <img src="img/zjl.jpg">
                          </a>
                          &nbsp;&nbsp;七里香<br>
@@ -208,7 +208,7 @@
                                 </span>
                                 <span class="muted">
                                   <i class="glyphicon glyphicon-envelope"></i>
-                                  <a href="commment.html" target="_blank">评论</a>
+                                  <a href="pages/commment.html" target="_blank">评论</a>
                                 </span>
                                 <span class="muted last">
                                   <a href="#">
@@ -220,7 +220,7 @@
                          </p>
                      </div>
                      <div class="content">
-                         <a href="commment.html" target="_blank">
+                         <a href="pages/commment.html" target="_blank">
                              <img src="img/zjl.jpg">
                          </a>
                          &nbsp;&nbsp;七里香<br>
@@ -283,7 +283,7 @@
                 <li class="hvr-sweep-to-right ">
 
                     <div>
-                        <a href="about.html" target="-_blank" >
+                        <a href="pages/about.html" target="-_blank" >
 
                             <h2>我的简历</h2>
                             <h3>ABOUT ME</h3>
@@ -293,7 +293,7 @@
                 <li class="hvr-bounce-to-left ">
 
                     <div>
-                        <a href="jayChou.html" target="_blank">
+                        <a href="pages/jayChou.html" target="_blank">
 
                             <h2>周杰伦</h2>
                             <h3>JAY</h3>
@@ -303,7 +303,7 @@
                 <li class="hvr-bounce-to-bottom ">
 
                     <div>
-                        <a href="movie.html" target="_blank">
+                        <a href="pages/movie.html" target="_blank">
 
                             <h2>电影</h2>
                             <h3>MOVIE</h3>
@@ -313,7 +313,7 @@
                 <li class="hvr-bounce-to-top ">
 
                     <div>
-                        <a href="commment.html" target="_blank">
+                        <a href="pages/commment.html" target="_blank">
 
                             <h2>评论</h2>
                             <h3>COMMENT</h3>
