--- a/pages/commment.html
+++ b/pages/commment.html
@@ -3,12 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>comment</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/comment.css" rel="stylesheet">
-    <link href="css/footer.css" rel="stylesheet">
-    <script type="text/javascript" src="js/gettime.js"></script>
-    <script type="text/javascript" src="js/totop.js"></script>
+    <link href="../css/comment.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
+    <script type="text/javascript" src="../js/gettime.js"></script>
+    <script type="text/javascript" src="../js/totop.js"></script>
     <style type="text/css">
         /*大屏幕图片动画*/
        .jumbotron img{
@@ -175,7 +175,7 @@
                 <!--<span class="icon-bar"></span>-->
                 <!--<span class="icon-bar"></span>-->
             <!--</button>-->
-            <a class="navbar-brand" href="index.html" target="_blank"><img src="img/zjl01.png"><span>首页</span></a>
+            <a class="navbar-brand" href="../index.html" target="_blank"><img src="../img/zjl01.png"><span>首页</span></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -192,7 +192,7 @@
 <div class="container two" >
     <div class="jumbotron three">
         <h2>周杰伦</h2>
-        <img src="img/bsr.jpg" class="pull-left animation">
+        <img src="../img/bsr.jpg" class="pull-left animation">
         <p>周杰伦（Jay Chou），1979年1月18日出生于台湾新北市。华语男歌手、词曲创作人、制作人、演员、导演、编剧及监制  。
             2000年发行首张专辑《Jay》出道，2002年在中国、新加坡、马来西亚、美国等地举办首场世界巡回演唱会。2003年成为美国
             《时代周刊》封面人物 。周杰伦的音乐融合中西方元素，风格多变，四次获得世界音乐大奖中国最畅销艺人奖  。
@@ -208,7 +208,7 @@
             <ul class="media-list">
                 <li class="media four">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="img/zjl01.png" alt="zhoujiel">
+                        <img class="media-object" src="../img/zjl01.png" alt="zhoujiel">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">以父之名</h4>
@@ -219,7 +219,7 @@
                 </li>
                 <li class="media five">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="img/zjl01.png" alt="zhoujiel">
+                        <img class="media-object" src="../img/zjl01.png" alt="zhoujiel">
                     </a>
                     <div class="media-body ">
                         <h4 class="media-heading">以父之名</h4>
@@ -230,7 +230,7 @@
                 </li>
                 <li class="media six">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="img/zjl01.png" alt="zhoujiel">
+                        <img class="media-object" src="../img/zjl01.png" alt="zhoujiel">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">以父之名</h4>
@@ -308,19 +308,19 @@
 <!--底部-->
 <footer >
     <p>
-        Copyright © 2015 . <a href="index.html" target="_blank">刘宾</a> 版权所有
+        Copyright © 2015 . <a href="../index.html" target="_blank">刘宾</a> 版权所有
     </p>
 </footer>
 <!--totop-->
 <div class="totop" id="totop">
-    <a href="javascript:;"><img src="img/totop.png" alt=""/></a>
+    <a href="javascript:;"><img src="../img/totop.png" alt=""/></a>
 </div>
 </body>
-<script type="text/javascript" src="js/jquery-2.1.4.min.js" ></script>
-<script type="text/javascript" src="js/velocity.js" ></script>
-<script type="text/javascript" src="js/velocity.ui.js" ></script>
-<script type="text/javascript" rel="script" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" rel="script" src="js/fadeIn.js"></script>
+<script type="text/javascript" src="../js/jquery-2.1.4.min.js" ></script>
+<script type="text/javascript" src="../js/velocity.js" ></script>
+<script type="text/javascript" src="../js/velocity.ui.js" ></script>
+<script type="text/javascript" rel="script" src="../js/bootstrap.min.js"></script>
+<script type="text/javascript" rel="script" src="../js/fadeIn.js"></script>
 
 <script>
     $(function(){
