--- a/pages/movie.html
+++ b/pages/movie.html
@@ -3,14 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>movie</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/top.css" type="text/css" >
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/top.css" type="text/css" >
     <!--<link rel="stylesheet" href="css/hover_animation.css" type="text/css" >-->
-    <link rel="stylesheet" href="css/left-hover.css" type="text/css" >
-    <link type="text/css" href="css/footer.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/left-hover.css" type="text/css" >
+    <link type="text/css" href="../css/footer.css" rel="stylesheet">
     <script src="http://cdn.bootcss.com/snap.svg/0.3.0/snap.svg-min.js"></script>
-    <script type="text/javascript" rel="script" src="js/snap.svg-min.js"></script>
-    <script type="text/javascript" src="js/time.js"></script>
+    <script type="text/javascript" rel="script" src="../js/snap.svg-min.js"></script>
+    <script type="text/javascript" src="../js/time.js"></script>
     <style type="text/css" rel="stylesheet">
         body{
             background: #a5a3ff;
@@ -193,7 +193,7 @@
                 <!--<span class="icon-bar"></span>-->
                 <!--<span class="icon-bar"></span>-->
                 <!--</button>-->
-                <a class="navbar-brand" href="#"><img src="img/zjl01.png"><span>周杰伦</span></a>
+                <a class="navbar-brand" href="#"><img src="../img/zjl01.png"><span>周杰伦</span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -211,7 +211,7 @@
         <div class="col-md-3">
             <div class="left">
                 <div class="pic_icon hvr-float-shadow">
-                    <img src="img/zjl01.png">
+                    <img src="../img/zjl01.png">
                     <div> <span><a>刘宾&gt&gt</a></span></div>
                 </div>
 
@@ -265,7 +265,7 @@
             <section id="grid" class="grid clearfix" >
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                     <figure>
-                        <img src="img/zjl.jpg" alt=""/>
+                        <img src="../img/zjl.jpg" alt=""/>
                         <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                             <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                         </svg>
@@ -280,7 +280,7 @@
                 </a>
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                     <figure>
-                        <img src="img/zjl.jpg" alt=""/>
+                        <img src="../img/zjl.jpg" alt=""/>
                         <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                             <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                         </svg>
@@ -295,7 +295,7 @@
                 </a>
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                     <figure>
-                        <img src="img/zjl.jpg" alt=""/>
+                        <img src="../img/zjl.jpg" alt=""/>
                         <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                             <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                         </svg>
@@ -310,7 +310,7 @@
                 </a>
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                     <figure>
-                        <img src="img/zjl.jpg" alt=""/>
+                        <img src="../img/zjl.jpg" alt=""/>
                         <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                             <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                         </svg>
@@ -325,7 +325,7 @@
                 </a>
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                     <figure>
-                        <img src="img/zjl.jpg" alt=""/>
+                        <img src="../img/zjl.jpg" alt=""/>
                         <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                             <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                         </svg>
@@ -340,7 +340,7 @@
                 </a>
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                     <figure>
-                        <img src="img/zjl.jpg" alt=""/>
+                        <img src="../img/zjl.jpg" alt=""/>
                         <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                             <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                         </svg>
@@ -355,7 +355,7 @@
                 </a>
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                     <figure>
-                        <img src="img/zjl.jpg" alt=""/>
+                        <img src="../img/zjl.jpg" alt=""/>
                         <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                             <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                         </svg>
@@ -370,7 +370,7 @@
                 </a>
                 <a   href="#" class="move_content" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
                 <figure>
-                    <img src="img/zjl.jpg" alt=""/>
+                    <img src="../img/zjl.jpg" alt=""/>
                     <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                         <path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/>
                     </svg>
@@ -390,11 +390,11 @@
 </div>
 <footer>
     <p>
-        Copyright © 2015 . <a href="index.html" target="_blank">刘宾</a> 版权所有
+        Copyright © 2015 . <a href="../index.html" target="_blank">刘宾</a> 版权所有
     </p>
 </footer>
 </body>
-<script type="text/javascript" rel="script" src="js/snap.svg-min.js"></script>
+<script type="text/javascript" rel="script" src="../js/snap.svg-min.js"></script>
 <script>
     (function() {
 
