--- a/pages/register.html
+++ b/pages/register.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>刘宾博客</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/register.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/register.css" type="text/css">
 
 </head>
 <body class="front">
@@ -20,7 +20,7 @@
 
                         <!-- logo -->
                         <div class="logo" >
-                            <a href="index.html"><img id="logo" src="img/zjl01.png" alt="iDea"><span>刘宾的博客</span></a>
+                            <a href="../index.html"><img id="logo" src="../img/zjl01.png" alt="iDea"><span>刘宾的博客</span></a>
                         </div>
                     </div>
                     <!-- header-left end -->
@@ -92,7 +92,7 @@
                                 <div class="col-md-10 col-md-offset-1" style="text-align:center;">
                                     <button type="submit" class="btn btn-group btn-default col-md-12">完成注册</button>
                                     <p><a href="#">< 返回上一步</a></p>
-                                    <p>麻烦？<a href="index.html">返回首页</a></p>
+                                    <p>麻烦？<a href="../index.html">返回首页</a></p>
                                 </div>
                             </div>
                         </form>
@@ -109,7 +109,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12" style="text-align:center;">
-                        <p style="line-height:46px;">Copyright © 2015 . <a href="index.html" target="_blank">刘宾</a> 版权所有</p>
+                        <p style="line-height:46px;">Copyright © 2015 . <a href="../index.html" target="_blank">刘宾</a> 版权所有</p>
                     </div>
                 </div>
             </div>
@@ -119,10 +119,10 @@
 </div>
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="plugins/modernizr.js"></script>
-<script src="plugins/jquery.validate.js"></script>
-<script type="text/javascript" src="plugins/template.js"></script>
-<script type="text/javascript" src="plugins/custom.js"></script>
+<script type="text/javascript" src="../plugins/modernizr.js"></script>
+<script src="../plugins/jquery.validate.js"></script>
+<script type="text/javascript" src="../plugins/template.js"></script>
+<script type="text/javascript" src="../plugins/custom.js"></script>
 
 
 </body>
