--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>刘宾的简历</title>
-    <link type="text/css" href="css/top.css">
+    <link type="text/css" href="../css/top.css">
     <style type="text/css">
 
         body,header,div,span,img dt,dd,dl{
@@ -118,7 +118,7 @@
 </head>
 <body>
 <header class="one">
-  <img src="img/liubin.jpg" class="lb_logo">  <span>刘宾</span><span><a  class="logo_a" href="index.html" target="_blank">返回首页</a></span>
+  <img src="../img/liubin.jpg" class="lb_logo">  <span>刘宾</span><span><a class="logo_a" href="../index.html" target="_blank">返回首页</a></span>
 </header>
 <section class="lb_road two">
     <h3>我的简历</h3>
@@ -176,7 +176,7 @@
            </p>
     </div>
 </section>
-<script type="text/javascript" src="js/jquery-2.1.4.min.js" ></script>
+<script type="text/javascript" src="../js/jquery-2.1.4.min.js" ></script>
 
 </body>
 </html>
