--- a/pages/jayChou.html
+++ b/pages/jayChou.html
@@ -3,16 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>周杰伦</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/jaychou.css" rel="stylesheet">
-    <link type="text/css" href="css/footer.css" >
-    <link type="text/css" href="css/totop.css">
-    <link rel="stylesheet" href="css/3DAnimation.css">
-    <link rel="stylesheet" href="css/jay-hover.css">
-    <script type="text/javascript" src="js/totop.js" ></script>
-    <script type="text/javascript" src="js/velocity.js" ></script>
-    <script type="text/javascript" src="js/velocity.ui.js" ></script>
+    <link href="../css/jaychou.css" rel="stylesheet">
+    <link type="text/css" href="../css/footer.css" >
+    <link type="text/css" href="../css/totop.css">
+    <link rel="stylesheet" href="../css/3DAnimation.css">
+    <link rel="stylesheet" href="../css/jay-hover.css">
+    <script type="text/javascript" src="../js/totop.js" ></script>
+    <script type="text/javascript" src="../js/velocity.js" ></script>
+    <script type="text/javascript" src="../js/velocity.ui.js" ></script>
     <style type="text/css">
    .carousel-caption{
        color: #020384;
@@ -81,7 +81,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" target="_blank"><img src="img/zjl01.png"><span>首页</span></a>
+            <a class="navbar-brand" href="../index.html" target="_blank"><img src="../img/zjl01.png"><span>首页</span></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -125,7 +125,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="img/bg01.jpg" alt="周杰伦">
+                    <img src="../img/bg01.jpg" alt="周杰伦">
                     <div class="carousel-caption">
                         <h1>jay</h1>
                         <p>周杰伦第一张专辑同名专辑Jay横空出世</p>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/bg02.jpg" alt="周杰伦">
+                    <img src="../img/bg02.jpg" alt="周杰伦">
                     <div class="carousel-caption">
                         <h1>范特西</h1>
                         <p>周杰伦第二张专辑范特西横空出世</p>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/bg03.jpg" alt="周杰伦">
+                    <img src="../img/bg03.jpg" alt="周杰伦">
                     <div class="carousel-caption">
                         <h1>叶惠美</h1>
                         <p>周杰伦第三张专辑叶惠美横空出世</p>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="item ">
-                    <img src="img/bg04.jpg" alt="周杰伦">
+                    <img src="../img/bg04.jpg" alt="周杰伦">
                     <div class="carousel-caption">
                         <h1>八度空间</h1>
                         <p>周杰伦第四张专辑八度空间横空出世</p>
@@ -177,7 +177,7 @@
     <div class="row">
         <div class="col-md-3 col-md-offset-1 all-captions-wrap">
             <div class="border2">
-                <img src="img/m300.jpg">
+                <img src="../img/m300.jpg">
                 <div class="border2_caption">
                     <h2>标题</h2>
                     <p>句中段落</p>
@@ -186,7 +186,7 @@
         </div>
         <div class="col-md-3">
             <div class="border2">
-                <img src="img/m300.jpg">
+                <img src="../img/m300.jpg">
                 <div class="border2_caption">
                     <h2>标题</h2>
                     <p>句中段落</p>
@@ -196,7 +196,7 @@
         <div class="col-md-3">
 
             <div class="border2">
-                <img src="img/m300.jpg">
+                <img src="../img/m300.jpg">
                 <div class="border2_caption">
                     <h2>标题</h2>
                     <p>句中段落</p>
@@ -207,7 +207,7 @@
     <div class="row">
         <div class="col-md-3 col-md-offset-1 ">
             <div class="slideCaptionDown">
-                <img src="img/m300.jpg">
+                <img src="../img/m300.jpg">
                 <div class="caption">
                     <h2>标题</h2>
                     <p>句中段落句中段落句中段落</p>
@@ -216,7 +216,7 @@
         </div>
         <div class="col-md-3">
             <div class="slideCaptionDown">
-                <img src="img/m300.jpg">
+                <img src="../img/m300.jpg">
                 <div class="caption">
                     <h2>标题</h2>
                     <p>句中段落句中段落句中段落</p>
@@ -226,7 +226,7 @@
         <div class="col-md-3">
 
             <div class="slideCaptionDown">
-                <img src="img/m300.jpg">
+                <img src="../img/m300.jpg">
                 <div class="caption">
                     <h2>标题</h2>
                     <p>句中段落句中段落句中段落</p>
@@ -260,14 +260,14 @@
                                  </p>
                             </div>
                             <div class="col-md-4">
-                                <img src="img/zjl.jpg" class="picAnimate" /></span>
+                                <img src="../img/zjl.jpg" class="picAnimate" /></span>
                             </div>
                         </div>
                 </div>
                 <div class="tab-pane" id="ftx">
                     <div class="row">
                         <div class="col-md-4">
-                            <img  class="" src="img/zjl.jpg" />
+                            <img  class="" src="../img/zjl.jpg" />
                         </div>
                         <div class="col-md-6 col-md-offset-2">
 
@@ -292,7 +292,7 @@
                                 第四届全球华语歌曲排行榜颁奖典礼年度最受欢迎专辑奖[1-3]  。</p>
                         </div>
                         <div class="col-md-4">
-                            <img src="img/zjl.jpg" /></span>
+                            <img src="../img/zjl.jpg" /></span>
                         </div>
                     </div>
 
@@ -300,7 +300,7 @@
                 <div class="tab-pane" id="bdkj">
                     <div class="row">
                         <div class="col-md-4">
-                            <img  class="" src="img/zjl.jpg" />
+                            <img  class="" src="../img/zjl.jpg" />
                         </div>
                         <div class="col-md-6 col-md-offset-2">
 
@@ -454,7 +454,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="text-align:center;">
-                    <p style="line-height:46px;">Copyright © 2015 . <a href="index.html" target="_blank">刘宾</a> 版权所有</p>
+                    <p style="line-height:46px;">Copyright © 2015 . <a href="../index.html" target="_blank">刘宾</a> 版权所有</p>
                 </div>
             </div>
         </div>
@@ -463,15 +463,15 @@
 <!-- footer end -->
 <!--totop-->
 <div class="totop" id="totop">
-    <a href="javascript:;"><img src="img/totop.png" alt=""/></a>
+    <a href="javascript:;"><img src="../img/totop.png" alt=""/></a>
 </div>
 <script type="text/javascript" src="js/animation.js" ></script>
-<script type="text/javascript " src="js/picAnimate.js"></script>
-<script type="text/javascript" src="js/jquery-2.1.4.min.js" ></script>
-<script type="text/javascript" src="js/bootstrap.min.js" ></script>
-<script type="text/javascript" src="js/velocity.js" ></script>
-<script type="text/javascript" src="js/velocity.ui.js" ></script>
-<script type="text/javascript" src="js/fadeIn.js"></script>
+<script type="text/javascript " src="../js/picAnimate.js"></script>
+<script type="text/javascript" src="../js/jquery-2.1.4.min.js" ></script>
+<script type="text/javascript" src="../js/bootstrap.min.js" ></script>
+<script type="text/javascript" src="../js/velocity.js" ></script>
+<script type="text/javascript" src="../js/velocity.ui.js" ></script>
+<script type="text/javascript" src="../js/fadeIn.js"></script>
 <script>
     $(function () {
         toTop();
