--- a/pages/login.html
+++ b/pages/login.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>刘宾的博客</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/register.css">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/register.css">
     <style type="text/css">
         .container{
             /*margin-bottom: 40px ;*/
@@ -13,7 +13,7 @@
             margin: 400px 0 0 50px ;
         }
         .main .col-md-7{
-            background-image: url(img/login_bg.jpg);
+            background-image: url(../img/login_bg.jpg);
             background-repeat: no-repeat;
             background-size: ;
             height: 250px;
@@ -32,7 +32,7 @@
 
                     <!-- logo -->
                     <div class="logo" >
-                        <a href="index.html"><img id="logo" src="img/zjl01.png" alt="iDea"><span>刘宾的博客</span></a>
+                        <a href="../index.html"><img id="logo" src="../img/zjl01.png" alt="iDea"><span>刘宾的博客</span></a>
                     </div>
                 </div>
                 <!-- header-left end -->
@@ -73,7 +73,7 @@
                             <div class="row">
                                 <div class="col-md-10" style="text-align:center;">
                                     <button type="submit" class="btn btn-group btn-default col-md-12">登录</button>
-                                    <p>还没有账户？<a href="register.html">注册</a>&nbsp; &nbsp;&nbsp;麻烦？<a href="index.html">返回首页</a></p>
+                                    <p>还没有账户？<a href="register.html">注册</a>&nbsp; &nbsp;&nbsp;麻烦？<a href="../index.html">返回首页</a></p>
                                 </div>
                             </div>
                         </form>
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="text-align:center;">
-                    <p style="line-height:46px;">Copyright © 2015 . <a href="index.html" target="_blank">刘宾</a> 版权所有</p>
+                    <p style="line-height:46px;">Copyright © 2015 . <a href="../index.html" target="_blank">刘宾</a> 版权所有</p>
                 </div>
             </div>
         </div>
