--- a/pages/about.html
+++ b/pages/about.html
@@ -5,13 +5,17 @@
     <title>刘宾的简历</title>
     <link type="text/css" href="../css/top.css">
     <style type="text/css">
-
+      
         body,header,div,span,img dt,dd,dl{
             margin: 0;
             padding: 0;
         }
         body{
             background: #204d74;
+        }
+        a{
+          color:#333;
+          text-decoration:none;
         }
         header{
             background-color: #000000;
@@ -136,6 +140,15 @@
       <div>
         <span>电话：18205556911</span>&nbsp;&nbsp;&nbsp;
         <span>邮箱：915249126@qq.com</span>
+      </div>
+      <div>
+        <span>博客：
+          <a href="https://segmentfault.com/u/txianzaishidongtiant/articles">https://segmentfault.com/u/txianzaishidongtiant/articles</a>
+        </span>&nbsp;&nbsp;&nbsp;</div>
+      <div>  
+        <span>github:
+          <a href="https://github.com/liubin915249126">https://github.com/liubin915249126</a>
+        </span>
       </div>
     </dl>
     <dl class="five">
