--- a/pages/about.html
+++ b/pages/about.html
@@ -171,7 +171,7 @@
      <h5>工作中</h5>
      <div class="">
        <p>在工作中主要经历了<span class="em">1.唯品会人才管理 2.上汽大通组织架构 3.上期考勤手机端 4.公司人才管理v11</span></p>
-       <p>技术栈主要是：<span class="em">css3,jquery,React,Redux,Saga,Es6,Webpack</span></p>
+       <p>技术栈主要是：<span class="em">css3,jquery,React,Redux,Saga,Es6,Webpack,antd</span></p>
        <p class="info">
          用了一年的时间通过原生js或是jquery入了前端的大门,打下了js的基础,期间比较喜欢用css3制作动画
          对于css3新特性比较了解.早期跟随张鑫旭学习css布局，对于前端布局里：浮动,定位,margin负值，transform
