--- a/pages/about.html
+++ b/pages/about.html
@@ -182,7 +182,7 @@
         <p class="info">
          React只负责前端view层，对于数据控制，我们选择Redux进行数据管理,
          Redux-saga处理异步操作，模拟数据采用的是nodejs+express提供模拟接口,我们使用fetch进行数据的获取
-         搭配上async,await可以避免回调地狱的产生。
+         搭配上async,await可以避免回调地狱的产生。UI库使用了antd来搭建后台管理页面
          在开发过程中大量使用ES6的新特性。
        </p>
       </div>
