--- a/pages/about.html
+++ b/pages/about.html
@@ -177,9 +177,11 @@
          递归函数,
          期间比较喜欢用css3制作动画
          对于css3新特性比较了解.早期跟随张鑫旭学习css布局，对于前端布局里：浮动,定位,margin负值，transform
-         能够做到灵活运用。</p>
+         ,BFC能够做到灵活运用。</p>
         <p class="info">
-        从2016年10月份公司前端技术转型选择了react全家桶，从零开始用webpack搭建起了react的开发环境， 用web-devserver启动前端服务器，从而实现 前后端完全分离的开发模式.
+        从2016年10月份公司前端技术转型选择了react全家桶,我对前端的认识也从事件驱动变为了数据驱动,
+        从零开始用webpack搭建起了react的开发环境， 
+        用web-devserver启动前端服务器，从而实现 前后端完全分离的开发模式.
         </p>
         <p class="info">
          React只负责前端view层，对于数据控制，我们选择Redux进行数据管理,
