--- a/pages/about.html
+++ b/pages/about.html
@@ -204,8 +204,12 @@
    </div>
    <div class='out item'>
      <h5>工作之外</h5>
-     <p>在工作外为E客公司做了以<span class="em">mui为基础的app(),其中以vue为基础作数据渲染和页面交互</span></p>
+     <p>在工作外为E客公司做了以<span class="em">mui为基础的app(),微信公众号(ekservice)</span></p>
      <p>技术栈主要是:<span class="em">Mui,Vue,Hbuilder,H5+</span></p>
+     <p class="info">
+       给E客公司做了两个app,相当于原生内嵌的页面，完成了可以媲美原生app的交互逻辑，以app为模板重写了E客公司
+       的微信公众号(ekservice),涉及到页面布局，页面美化，交互逻辑。
+     </p>
    </div>
 </div>
 
